# auto-classify-support-system

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  run.py
backend/app/: __init__.py  config.py  extensions.py
backend/app/api/: __init__.py  analytics.py  chat.py  session.py
backend/app/models/: __init__.py  message.py
backend/app/services/: __init__.py  classifier.py  db.py  llm.py  nlp_client.py  orchestrator.py  pipeline.py  retriever.py  sentiment.py
backend/app/utils/: response.py  sse.py
backend/tests/: conftest.py  test_adapters.py  test_analytics.py  test_chat.py  test_db.py  test_pipeline.py  test_retriever.py
docker/es/: elasticsearch.yml
docs/: api.md  architecture.md  test_plan.md
docs/adr/: README.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/superpowers/specs/: 2026-06-29-auto-classify-support-system-design.md
docs/vibecoding/: README.md  ai-workflow.md  coding-standards.md  git-convention.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
frontend/src/assets/: style.css
frontend/src/components/: ChatArea.vue  MessageBubble.vue  Sidebar.vue
frontend/src/router/: index.js
frontend/src/stores/: chat.js
frontend/src/utils/: echarts.js  labels.js
frontend/src/views/: AnalyticsView.vue
nlp/: Dockerfile  pyproject.toml
nlp/config/: intents.yml
nlp/data/: training.jsonl
nlp/src/: extract.py  predict.py  preprocess.py  server.py  train.py
nlp/tests/: test_classifier.py  test_extract.py
