[project]
name = "auto-classify-support-system"
version = "0.1.0"
description = "电商客服智能问答系统"
requires-python = ">=3.10,<4.0"
dependencies = [
    "flask>=3.1.1,<4.0",
    "flask-cors>=5.0.0",
    "openai>=1.55.0",
    "elasticsearch>=8.15.0,<9.0",
    "redis>=5.2.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "requests>=2.34.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
