[project]
name = "acss-nlp"
version = "0.1.0"
description = "ACSS NLP - 意图分类服务（spaCy + SetFit）"
requires-python = ">=3.12"
dependencies = [
    "spacy>=3.8.0,<4.0",
    "setfit>=1.1.0,<2.0",
    "jieba>=0.42.1,<0.43",
    "flask>=3.1.0,<4.0",
    "flask-cors>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]
