[project]
name = "acss-nlp"
version = "0.1.0"
description = "ACSS NLP - 意图分类服务（spaCy + SetFit）"
requires-python = ">=3.12"
dependencies = [
    "spacy>=3.8.0,<4.0",
    "setfit>=1.1.0,<2.0",
    "jieba>=0.42.1,<0.43",
    "flask>=3.1.0,<4.0",
    "flask-cors>=5.0.0",
    "datasets>=3.0.0",
    "pyyaml>=6.0.0",
    "sentence-transformers>=3.3.0,<4.0",
    "transformers>=4.47.0,<4.49.0",
    "torch>=2.9.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

# ─── PyTorch GPU (CUDA 13.0) 索引配置 ───
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
